<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World</string>
    <string name="message">Look at my GUI </string>
    <string name="ButtonText">Click Here</string>
    <string name="checked">Check this out!</string>
    <string name="inputHint">Type Here</string>
    <string name="switching">Switch ON / OFF</string>
    <string name="switchingON">The switch is now ON</string>
    <string name="switchingOFF">The switch is now OFF</string>
    <string name="moreinfo">Here is more information</string>
    <string name="undo">Undo</string>
    <string name="enteryouremail">Enter your email address:</string>
    <string name="typepassword">Type your password:</string>
    <string name="emailhint">Type email here</string>
    <string name="login">LOGIN</string>
    <string name="profile">Your profile</string>
    <string name="yourname">Your name:</string>
    <string name="entername">Enter your name</string>
    <string name="youremail">Your email:</string>
    <string name="enteremail">Enter your email</string>
    <string name="yourpicture">Your picture:</string>
    <string name="clickbutton">Click the button above to take a picture</string>
    <string name="chatroom">Go to chat</string>
    <string name="send">SEND</string>
    <string name="receive">RECEIVE</string>
    <string name="chattext">Type Here</string>
    <string name="weatherforecast">Weather Forecast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="messagehere">Message Here</string>
    <string name="id">ID=</string>
    <string name="issend">Is a Send Message</string>
    <string name="hide">HIDE</string>
    <string name ="goto_toolbar">Go to Toolbar Page</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>