<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp">

    <TextView
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/yourname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yourname"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/entername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entername"
        android:layout_weight="1"
        tools:ignore="Autofill,TextFields"
        android:nextFocusDown="@id/weatherforecast"
        android:nextFocusUp="@id/chatroom"
        android:nextFocusLeft="@id/enteremail"
        android:nextFocusRight="@id/picture"/>

    <TextView
        android:id="@+id/youremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/youremail"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/enteremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enteremail"
        android:layout_weight="1"
        tools:ignore="Autofill,TextFields"
        android:nextFocusDown="@id/weatherforecast"
        android:nextFocusUp="@id/chatroom"
        android:nextFocusLeft="@id/entername"
        android:nextFocusRight="@id/picture"/>

    <TextView
        android:id="@+id/yourpicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yourpicture"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame"
        android:layout_weight="1"
        tools:ignore="ContentDescription"
        android:nextFocusDown="@id/enteremail"
        android:nextFocusUp="@id/entername"
        android:nextFocusLeft="@id/chatroom"
        android:nextFocusRight="@id/weatherforecast"/>

    <TextView
        android:id="@+id/clickbutton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/clickbutton"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/chatroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chatroom"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:nextFocusDown="@id/enteremail"
        android:nextFocusUp="@id/entername"
        android:nextFocusLeft="@id/picture"
        android:nextFocusRight="@id/weatherforecast"/>

    <Button
        android:id="@+id/weatherforecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weatherforecast"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:nextFocusDown="@id/enteremail"
        android:nextFocusUp="@id/entername"
        android:nextFocusLeft="@id/chatroom"
        android:nextFocusRight="@id/picture"/>

</LinearLayout>