<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment"
    android:id="@+id/fragmentdetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/messagehere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/messagehere"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/issend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/issend" />

    </LinearLayout>

    <Button
        android:id="@+id/hideButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="HIDE" />

</FrameLayout>
